# hspec-tidy-formatter

./: .gitattributes  .gitignore  DEVELOPMENT.md  README.md  cabal.project  hspec-tidy-formatter.cabal  stack.yaml
.github/workflows/: ci.yml
misc/: dev.project
readme-example/: Helpers.hs  SpecHook.hs
readme-example/Data/MyLogic/: EvaluatorSpec.hs
readme-example/Data/MyLogic/Core/: InstancesSpec.hs
readme-example/Data/MyLogic/TestUtils/: GeneratorSpec.hs
scripts/: test-tested-with
scripts/montage/: Makefile  README.md  capture  runTest
src/Test/Hspec/: TidyFormatter.hs
src/Test/Hspec/TidyFormatter/: Internal.hs
src/Test/Hspec/TidyFormatter/Internal/: Parts.hs
test/dev-example/: ExampleSpec.hs  SpecHook.hs
test/dev-example/Example/: SubSpec.hs
test/dev-example/Sub/: MultilineSpec.hs  SubSpec.hs
test/doctests/: doctests.hs
