cabal-version: 3.0

name:           hspec-tidy-formatter
version:        0.2.0.0
stability:      experimental
category:       Testing
synopsis:       A custom hspec formatter for easy-to-read terminal output.
homepage:       https://github.com/carlwr/hspec-tidy-formatter#readme
bug-reports:    https://github.com/carlwr/hspec-tidy-formatter/issues
author:         Carl
maintainer:     Carl
copyright:      none
license:        MIT
license-file:   LICENSE
build-type:     Simple
tested-with:
    GHC == 9.14.1
    GHC == 9.12.2
    GHC == 9.10.2
    GHC == 9.8.4
    GHC == 9.6.7
    GHC == 9.4.8
extra-doc-files:
    README.md
    README.lhs
    assets/montage.png
description:
    A custom hspec formatter for easy-to-read terminal output. For details, refer to the README.md file.

source-repository head
  type: git
  location: https://github.com/carlwr/hspec-tidy-formatter

flag doctest
  description: enable doctests
  default: False
  manual: True

flag isDev
  description: development conveniences
  default: False
  manual: True


-- dependencies
-- ------------

-- library:

common dep_base       { build-depends: base             >= 4.17.2.1 && < 5 }
common dep_effable    { build-depends: effable          >= 0.3.0.0  && <0.4}
common dep_hspec-api  { build-depends: hspec-api        >= 2.11.8   && < 3 }


-- test components:

common dep_hspec      { build-depends: hspec            >= 2.11.8   && < 3 }
common dep_hspec-core { build-depends: hspec-core       >= 2.11.8   && < 3 }
common dep_hspec-hh   { build-depends: hspec-hedgehog   >= 0.3.0.0  && < 1 }
common dep_hh         { build-depends: hedgehog         >= 1.5      && < 2 }

common tooldep_hspec-discover
  build-tool-depends:
      hspec-discover:hspec-discover >= 2.11.8 && < 3


-- components
-- ----------

common defaults
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wno-type-defaults
      -Wno-partial-type-signatures
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Winvalid-haddock
      -Wredundant-bang-patterns
      -Wredundant-strictness-flags
  if impl(ghc >= 9.8)
    ghc-options:
      -Winconsistent-flags
  if flag(isDev)
    ghc-options:
      -freverse-errors
      -fshow-hole-matches-of-hole-fits
      -fhide-source-paths
      -fwrite-ide-info
      -dsuppress-module-prefixes
  default-language: GHC2021
  default-extensions:
      PartialTypeSignatures
      UnicodeSyntax
      ExtendedDefaultRules
      LambdaCase
      RecordWildCards
      ViewPatterns
      MultiWayIf

library
  import:
    , defaults
    , dep_base
    , dep_effable
    , dep_hspec-api
  hs-source-dirs: src
  autogen-modules: Paths_hspec_tidy_formatter
  other-modules:   Paths_hspec_tidy_formatter
  exposed-modules:
      Test.Hspec.TidyFormatter
      Test.Hspec.TidyFormatter.Internal

test-suite readme
  import:
    , defaults
    , dep_base
    , dep_hspec
  type:            exitcode-stdio-1.0
  main-is:         README.lhs
  ghc-options:     -pgmL markdown-unlit
  build-tool-depends:
    , markdown-unlit:markdown-unlit >= 0.5 && < 0.7
  build-depends:
    , hspec-tidy-formatter

test-suite doctest
  import:
    , defaults
    , dep_base
  -- no solution for 9.14 due to doctest-parallell
  -- (forcing with --alow-newer causes compilation error)
  if !flag(doctest) || impl(ghc >= 9.14)
      buildable: False
  hs-source-dirs:  test/doctests
  type:            exitcode-stdio-1.0
  main-is:         doctests.hs
  ghc-options:
      -threaded
  build-depends:
    , hspec-tidy-formatter
    , doctest-parallel >= 0.3 && < 1.0

test-suite readme-example
  import:
    , defaults
    , dep_base
    , dep_hspec
    , dep_hspec-core
    , dep_hspec-hh
    , dep_hh
    , tooldep_hspec-discover
  -- no solution for 9.14 (involves hedgehog)
  if impl(ghc >= 9.14)
      buildable: False
  hs-source-dirs:  readme-example
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -main-is Spec
  other-modules:
      Data.MyLogic.Core.InstancesSpec
      Data.MyLogic.EvaluatorSpec
      Data.MyLogic.TestUtils.GeneratorSpec
      Helpers
      SpecHook
  build-depends:
    , hspec-tidy-formatter

test-suite dev-example
  import:
    , defaults
    , dep_base
    , dep_hspec
    , dep_hspec-core
    , dep_hspec-hh
    , dep_hh
    , tooldep_hspec-discover
  -- uses MultilineStrings (ghc-9.12+):
  if !flag(isDev) || impl(ghc < 9.12.0.0)
      buildable: False
  hs-source-dirs:  test/dev-example
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -main-is Spec
  other-modules:
      ExampleSpec
      Sub.SubSpec
      Sub.MultilineSpec
      SpecHook
  build-depends:
    , hspec-tidy-formatter
